--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,8 +18,8 @@
             android:title="@string/history"/>
     </group>
 
-    <item android:title="@string/additional">
-        <menu>
+    <group android:id="@+id/menu_buttom"
+        android:checkableBehavior="none">
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_settings"
@@ -28,8 +28,6 @@
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_menu_about"
                 android:title="@string/about"/>
-        </menu>
-    </item>
-
+    </group>
 
 </menu>
