--- a/app/src/main/res/menu/translate.xml
+++ b/app/src/main/res/menu/translate.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:icon="@drawable/ic_bookmark_outline"
-        android:id="@+id/favourite"
+        android:id="@+id/menu_favourite"
         android:orderInCategory="100"
         android:title="@string/favourites"
         app:showAsAction="always"/>
