--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="margin_vertical">72dp</dimen>
+    <dimen name="list_item_height">48dp</dimen>
+    <dimen name="list_item_horizontal_padding">16dp</dimen>
+    <dimen name="list_item_vertical_padding">12dp</dimen>
+    <dimen name="list_item_image_side">24dp</dimen>
+    <dimen name="list_item_word_text_size">16sp</dimen>
 </resources>
