--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -47,7 +47,7 @@
         android:textSize="@dimen/list_item_word_text_size" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_of_words"
+        android:id="@+id/suggestion_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin" />
