--- a/app/src/main/res/menu/translate.xml
+++ b/app/src/main/res/menu/translate.xml
@@ -2,9 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:icon="@drawable/ic_bookmark_outline"
         android:id="@+id/menu_favourite"
+        android:icon="@drawable/ic_bookmark_outline"
         android:orderInCategory="100"
         android:title="@string/favourites"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_sharethis_logo"
+        android:orderInCategory="101"
+        android:title="@string/share"
+        app:showAsAction="ifRoom" />
 </menu>
