--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,12 +7,12 @@
     tools:context="com.shagalalab.sozlik.about.AboutActivity">
 
     <TextView
-        android:linksClickable="true"
-        android:text="@string/about_text"
         android:id="@+id/text_about"
-        android:padding="18dp"
-        android:textSize="16sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:linksClickable="true"
+        android:padding="18dp"
+        android:text="@string/about_text"
+        android:textSize="16sp" />
 
 </RelativeLayout>
