--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/empty_history"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:drawableTop="@drawable/ic_menu_history"
-        android:text="@string/text_for_empty_histories"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:drawableTop="@drawable/ic_history"
+        android:text="@string/empty_histories_text"
         android:textAlignment="center"
-        android:textSize="16sp"
-        android:visibility="visible" />
+        android:textSize="16sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/history_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
-</LinearLayout>
+</FrameLayout>
