--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="color_primary">#2f3640</color>
+    <color name="color_primary_dark">#1f232a</color>
+    <color name="color_accent">#ef6c00</color>
+    <color name="grey1">#4f575f</color>
+    <color name="grey2">#757575</color>
+    <color name="grey3">#eeeeee</color>
 </resources>
