--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -9,4 +9,5 @@
     android:focusable="true"
     android:padding="@dimen/list_item_horizontal_padding"
     android:textSize="@dimen/list_item_word_text_size"
+    android:textColor="@color/grey2"
     tools:text="Adam"/>
