--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_margin_half">8dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="list_item_height">48dp</dimen>
@@ -8,4 +9,5 @@
     <dimen name="list_item_vertical_padding">12dp</dimen>
     <dimen name="list_item_image_side">24dp</dimen>
     <dimen name="list_item_word_text_size">16sp</dimen>
+    <dimen name="keyboard_info_text_size">14sp</dimen>
 </resources>
