--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,6 +13,6 @@
         android:linksClickable="true"
         android:padding="18dp"
         android:text="@string/about_text"
-        android:textSize="16sp" />
+        android:textSize="@dimen/standard_text_size" />
 
 </RelativeLayout>
