--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -31,7 +31,7 @@
             android:paddingStart="@dimen/standard_margin"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/standard_text_size"/>
     </LinearLayout>
 
     <TextView
@@ -51,10 +51,11 @@
         android:id="@+id/text_view_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey3"
+        android:background="@color/blue_grey1"
         android:padding="@dimen/standard_margin"
-        android:textSize="@dimen/list_item_word_text_size"
+        android:textSize="@dimen/standard_text_size"
         android:visibility="gone"
+        android:textColor="@color/color_primary_dark"
         tools:text="@string/suggestion_found"
         tools:visibility="visible"/>
 
