--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -11,7 +11,7 @@
         android:drawableTop="@drawable/ic_bookmark"
         android:text="@string/empty_favorites_text"
         android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textSize="@dimen/standard_text_size" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_favorites"
