--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,7 +11,7 @@
         android:drawableTop="@drawable/ic_history"
         android:text="@string/empty_histories_text"
         android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textSize="@dimen/standard_text_size" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/history_list"
