--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,8 +18,7 @@
             android:title="@string/history"/>
     </group>
 
-    <group android:id="@+id/menu_buttom"
-        android:checkableBehavior="none">
+    <group android:id="@+id/menu_buttom" android:checkableBehavior="none">
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_settings"
