--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="color_accent">#ef6c00</color>
     <color name="grey1">#4f575f</color>
     <color name="grey2">#757575</color>
-    <color name="grey3">#eeeeee</color>
+    <color name="blue_grey1">#ECEFF1</color>
 </resources>
