--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
     <item name="ic_menu_dictionary" type="drawable">@drawable/ic_translate_black_24dp</item>
     <item name="ic_menu_favourites" type="drawable">@drawable/ic_turned_in_black_24dp</item>
     <item name="ic_menu_history" type="drawable">@drawable/ic_history_black_24dp</item>
