--- a/app/src/main/res/layout/activity_translation.xml
+++ b/app/src/main/res/layout/activity_translation.xml
@@ -58,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/standard_margin"
-            android:text="@string/android_studio_android_com"
+            android:text="@string/dictionary"
             android:textSize="@dimen/standard_text_size"
             android:textColor="@color/color_primary_dark"/>
 
