--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/color_primary_dark"
+    android:gravity="center_horizontal|bottom"
     android:padding="@dimen/standard_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:gravity="center_horizontal"
-        android:text="@string/qaraqalpaq_dictionaries"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"/>
-
-</FrameLayout>
+    android:text="@string/qaraqalpaq_dictionaries"
+    android:textColor="@android:color/white"
+    android:textSize="22sp"
+    tools:ignore="Overdraw"/>
