Introduce dagger and restructure packages

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context="com.shagalalab.sozlik.about.AboutActivity">
+    tools:context=".ui.about.AboutActivity">
     <TextView
         android:id="@+id/text_about"
         android:layout_width="match_parent"
